--- a/PasuanJawi.css
+++ b/PasuanJawi.css
@@ -1,4 +1,4 @@
-/* Pasuan Diubah Suai, Tambah Nya ڽ awalan dan tengah */
+/* Pasuan Diubah Suai, Tambah Nya ڽ awalan dan tengah. Tambah hamza tiga suku */
 @font-face {
   font-family: 'Noto Kufi Arabic';
   font-style: normal;
