--- a/PasuanJawi.css
+++ b/PasuanJawi.css
@@ -4,6 +4,6 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://raw.githubusercontent.com/shirayukiproject/website/raw/main/NotoKufiArabic-Regular.woff2) format('woff2');
+  src: url(https://rawcdn.githack.com/shirayukiproject/website/ea9070b58d53ac7848860e610d36ac945a866b7c/NotoKufiArabic-Regular.woff2) format('woff2');
   unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
 }
