--- a/js-css/sryk-utama.css
+++ b/js-css/sryk-utama.css
@@ -32,6 +32,7 @@
 
 /* Keluarga Fon */
 .jawi { font-family: Noto Kufi Arabic, Roboto; }
+.jawi-bnassim { font-family: NKL Bahij Nassim, Roboto;}
 
 /*
  * wjs-recentComments v1.1.0
