--- a/js-css/PasuanJawi.css
+++ b/js-css/PasuanJawi.css
@@ -13,6 +13,6 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://rawcdn.githack.com/niskala5570/pasuanjawi/d3977e53f7ff44c0cf88bbc5750c912e6e905ad4/fon/Bahij%20Nassim/NKL-BahijNassim.otf) format('otf');
+  src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@main/fon/Bahij%20Nassim/NKL-BahijNassim.woff2) format('woff2');
   unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
 }
