--- a/js-css/sryk-utama.css
+++ b/js-css/sryk-utama.css
@@ -96,6 +96,7 @@ font-size: .9em;
 padding: 1.5em;
 margin-bottom: .5em;
 border-radius: 5px;
+background-color: rgb(29, 43, 64);
 box-shadow: 0 2px 6px rgba(0,21,64,.14), 0 2px 20px rgba(0,21,64,.05);
 }
 /* Avatar Gelap
