--- a/js-css/PasuanJawi.css
+++ b/js-css/PasuanJawi.css
@@ -1,4 +1,4 @@
-/* Noto Kufi Araabic, Diubah Suai Untuk Jawi, Tambah Nya ڽ awalan dan tengah. Tambah hamza tiga suku uni0674 */
+/* Noto Kufi Arabic, Diubah Suai Untuk Jawi, Tambah Nya ڽ awalan dan tengah. Tambah hamza tiga suku uni0674 */
 @font-face {
   font-family: 'Noto Kufi Arabic';
   font-display: swap;
@@ -9,6 +9,6 @@
 @font-face {
   font-family: 'NKL Bahij Nassim';
   font-display: swap;
-  src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@main/fon/Bahij%20Nassim/NKL-BahijNassim.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@2.872/v2.727(usang)/Bahij%20Nassim/NKL-BahijNassim.woff2) format('woff2');
   unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
 }
