--- a/js-css/PasuanJawi.css
+++ b/js-css/PasuanJawi.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'Noto Kufi Arabic';
   font-display: swap;
-  src: url(https://cdn.jsdelivr.net/gh/shirayukiproject/website@main/pasuan/NotoKufiArabic-Regular.woff2) format('woff2');
+  src: url(https://cdn.jsdelivr.net/gh/shirayukiproject/website/pasuan/NotoKufiArabic-Regular.woff2) format('woff2');
   unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
 }
 /* Bahij Nassim, Diubah Suai Untuk Jawi */
