Tambah U+2E41 (Koma Cermin)
Koma cermin dari pasuan yg diubah suai tidak akan digunakan sebab tiada dalam lingkungan unikod yg ditetapkan.

Kali ni dah letak

--- a/js-css/PasuanJawi.css
+++ b/js-css/PasuanJawi.css
@@ -3,14 +3,14 @@
   font-family: "Noto Kufi Arabic";
   font-display: swap;
   src: url(https://cdn.jsdelivr.net/gh/projeksyirayuki/sesawang@main/pasuan/NotoKufiArabic.woff2) format('woff2');
-  unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
 @font-face {
   font-family: "Noto Kufi Arabic";
   font-display: swap;
   font-weight: bold;
   src: url(https://cdn.jsdelivr.net/gh/projeksyirayuki/sesawang@main/pasuan/NotoKufiArabic-Bold.woff2) format('woff2');
-  unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
 
 /* Bahij Nassim, Diubah Suai Untuk Jawi */
@@ -18,7 +18,7 @@
   font-family: 'NKL Bahij Nassim';
   font-display: swap;
   src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@2.872/v2.727%20(Jawi%20Sahaja)/Bahij%20Nassim/NKL-BahijNassim.woff2) format('woff2');
-  unicode-range: unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
 
 /* NKL Dubai */
@@ -29,7 +29,7 @@
   font-weight: 300;
   font-display: swap;
   src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@2.872/Persendirian%20%26%20Perdagangan/Dubai/NKLDubai-Light.woff2) format('woff2');
-  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
 /* Biasa */
 @font-face {
@@ -38,7 +38,7 @@
   font-weight: 400;
   font-display: swap;
   src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@2.872/Persendirian%20%26%20Perdagangan/Dubai/NKLDubai-Regular.woff2) format('woff2');
-  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
 /* Tebal */
 @font-face {
@@ -47,5 +47,5 @@
   font-weight: 700;
   font-display: swap;
   src: url(https://cdn.jsdelivr.net/gh/niskala5570/pasuanjawi@2.872/Persendirian%20%26%20Perdagangan/Dubai/NKLDubai-Bold.woff2) format('woff2');
-  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF;
+  unicode-range: U+0600-06FF,U+0750-077F,U+08A0-08FF,U+FB50-FDFF,U+FE70-FEFF,U+10E60-10E7F,U+1EC70-1ECBF,U+1ED00-1ED4F,U+1EE00-1EEFF,U+2E41;
 }
